--- a/src/Components/Board/Board.css
+++ b/src/Components/Board/Board.css
@@ -1,5 +1,5 @@
-.board-row:after {
-  clear: both;
-  content: "";
-  display: table;
+.board-squares {
+  max-width: 300px;
+  display: flex;
+  flex-wrap: wrap;
 }
