--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -4,10 +4,17 @@
 
 .game {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
 }
 
 .game-info {
-  margin-left: 20px;
+  width: 297px;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.game-history {
+  width: 297px;
 }
   
