--- a/src/Components/Square/Square.css
+++ b/src/Components/Square/Square.css
@@ -1,16 +1,24 @@
 .square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
+  background: #4d4646;
+  border: none;
+  font-size: 60px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
+  height: 100px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 100px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  color: #f5eaea;
+}
+
+.square:nth-of-type(even) {
+  background: #5b5656;
+}
+
+.square:nth-of-type(odd) {
+  background: #4d4646;
 }
 
 .square:focus {
