--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -6,15 +6,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 312px;
+  margin: 0 auto;
 }
 
 .game-info {
-  width: 297px;
+  width: 100%;
   font-size: 20px;
   margin-bottom: 20px;
 }
 
 .game-history {
-  width: 297px;
+  width: 100%;
 }
   
