--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -1,7 +1,3 @@
-.status {
-  margin-bottom: 10px;
-}
-
 .game {
   display: flex;
   flex-direction: column;
@@ -14,6 +10,13 @@
   width: 100%;
   font-size: 20px;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.game-info .game-status {
+  flex-shrink: 0;
 }
 
 .game-history {
